# hlgl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
examples/: demo_scene.cpp  hello_imgui.cpp  hello_triangle.cpp
include/: hlgl.h
include/hlgl/: buffer.h  context.h  frame.h  hlgl-base.h  hlgl-buffer.h  hlgl-context.h  hlgl-core.h  hlgl-frame.h  hlgl-image.h  hlgl-pipeline.h  hlgl-plus.h  hlgl-shader.h  hlgl-texture.h  hlgl-types.h  pipeline.h  shader.h  texture.h  types.h  vk-fwd.h
include/hlgl/core/: buffer.h  context.h  frame.h  pipeline.h  shader.h  texture.h  types.h  vk-fwd.h
include/hlgl/plus/: assetcache.h  material.h  mesh.h  model.h  scene.h  scenegraph.h  vertex.h
include/hlgl/utils/: array.h  flags.h  hlgl-utils.h
include/wcgl/: wcgl.h
include/wcgl/core/: wcgl-buffer.h  wcgl-context.h  wcgl-frame.h  wcgl-pipeline.h  wcgl-texture.h  wcgl-types.h  wcgl-vk-fwd.h
include/wcgl/plus/: wcgl-mesh.h  wcgl-vertex.h
src/core/: debug.cpp  debug.h  wcgl-debug.cpp  wcgl-debug.h
src/core/vk/: buffer.cpp  context-vk-backend.cpp  context.cpp  frame.cpp  pipeline.cpp  shader.cpp  texture.cpp  vk-debug.h  vk-translate.cpp  vk-translate.h  wcgl-buffer.cpp  wcgl-context-vk-backend.cpp  wcgl-context.cpp  wcgl-frame.cpp  wcgl-pipeline.cpp  wcgl-texture.cpp  wcgl-vk-debug.h  wcgl-vk-includes.h  wcgl-vk-translate.cpp  wcgl-vk-translate.h
src/examples/: demo_maxwell.cpp  demo_scene.cpp  hello_compute.cpp  hello_compute.cpp_disabled  hello_gltf.cpp  hello_imgui.cpp  hello_imgui.cpp_disabled  hello_obj.cpp  hello_triangle.cpp
src/plus/: assetcache.cpp  mesh.cpp  model-loadGltf.cpp  scene.cpp  wcgl-mesh.cpp
src/plus/shaders/: pbr.h
src/utils/: array.h  debug.h  observer.h
src/vk/: buffer.cpp  buffer.h  context-vk-backend.cpp  context.cpp  context.h  debug.h  frame.cpp  frame.h  image.cpp  image.h  pipeline.cpp  pipeline.h  sampler.cpp  sampler.h  shader.cpp  shader.h  texture.cpp  texture.h  vk-buffer.cpp  vk-buffer.h  vk-context.h  vk-debug.h  vk-frame.cpp  vk-includes.h  vk-pipeline.cpp  vk-shader.cpp  vk-shader.h  vk-translate.cpp  vk-translate.h  vkimpl-context.h  vkimpl-debug.h  vkimpl-translate.h  vulkan-headers.h  vulkan-includes.h  vulkan-translate.cpp  vulkan-translate.h
